src/objects/QPMS__Spare_Part__c.object
<CustomObject>
    <description>Store spare part information.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <inlineHelpText>Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Part_Name__c</fullName>
        <formula>QPMS__Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <inlineHelpText>Product</inlineHelpText>
        <label>Part</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>QPMS__Product__c.QPMS__Type__c</field>
                <operation>equals</operation>
                <value>Part</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Spare Parts</relationshipLabel>
        <relationshipName>Spare_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Quantity_On_Hand__c</fullName>
        <label>Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Threshold_Quantity__c</fullName>
        <description>Threshold Quantity</description>
        <inlineHelpText>Threshold Quantity</inlineHelpText>
        <label>Threshold Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Spare Part</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Quantity_On_Hand__c</columns>
        <columns>QPMS__Threshold_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Spare Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spare Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>